# idesk

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  config.h.in  configure  configure.ac  configure.in  libtool
autom4te.cache/: output.0  requests  traces.0
docker/: Dockerfile  Dockerfile.preview  Makefile  preview-entrypoint.sh
examples/: default.lnk  dot.ideskrc  dot.xsession  folder_home.xpm
src/: AbstractClasses.h  Action.cpp  Action.h  ActionConfig.cpp  ActionConfig.h  App.cpp  App.h  Database.cpp  Database.h  DesktopConfig.cpp  DesktopConfig.h  DesktopContainer.h  DesktopIconConfig.cpp  DesktopIconConfig.h  FreeDesktopIcon.cpp  FreeDesktopIcon.h  Main.cpp  Makefile.am  Makefile.in  Misc.cpp  Misc.h  Timer.cpp  Timer.h  Util.h  XDesktopContainer.cpp  XDesktopContainer.h  XIcon.cpp  XIcon.h  XIconWithShadow.cpp  XIconWithShadow.h  XImlib2Background.cpp  XImlib2Background.h  XImlib2Caption.cpp  XImlib2Caption.h  XImlib2Image.cpp  XImlib2Image.h  XImlib2Shadow.cpp  XImlib2Shadow.h  XImlib2ToolTip.cpp  XImlib2ToolTip.h  (+1 more)
